# PhoneAssistant

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm_jni.cpp  llm_session.cpp  llm_session.h  llm_stream_buffer.hpp  mls_config.h  mls_log.h  processor.cpp  utf8_stream_processor.hpp
app/src/main/cpp/video/: video_processor.h
app/src/main/java/dev/phoneassistant/: MainActivity.kt
app/src/main/java/dev/phoneassistant/data/model/: AssistantMode.kt  ModelCatalog.kt  ModelRepository.kt  Models.kt
app/src/main/java/dev/phoneassistant/data/preference/: PreferenceStore.kt
app/src/main/java/dev/phoneassistant/domain/: AssistantEngine.kt
app/src/main/java/dev/phoneassistant/domain/chat/: ChatEngine.kt  GenerateResultProcessor.kt  PromptBuilder.kt
app/src/main/java/dev/phoneassistant/domain/planner/: CommandPlanner.kt
app/src/main/java/dev/phoneassistant/domain/speech/: SpeechRecognizer.kt
app/src/main/java/dev/phoneassistant/domain/voice/: VoiceChatEngine.kt
app/src/main/java/dev/phoneassistant/offline/audio/: AudioChunksPlayer.kt  AudioDataListener.kt
app/src/main/java/dev/phoneassistant/service/: AssistantAccessibilityService.kt  AssistantActionExecutor.kt
app/src/main/java/dev/phoneassistant/ui/: AssistantViewModel.kt
app/src/main/java/dev/phoneassistant/utils/: FileUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
